[package]
name = "obci-tags-filter"
version = "0.1.0"
edition = "2021"
rust-version = "1.72.0"

[toolchain]
channel = "nightly"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quick-xml = "0.29.0"
walkdir = "2"
anyhow = "1"
clap = { version = "4.4.0", features = ["derive"] }
